# MPMUtils

./: .gitignore  CMakeLists.txt  COPYING  CXXWarnings.cmake  Doxyfile  GitRepoTag.cmake  Makefile  syncCode.sh  sync_MPMUtils.sh
DB/: AnalysisDB.cc  AnalysisDB.hh  AnalysisDB_Schema.sql  ConfigDB_Helper.cc  ConfigDB_Helper.hh  SQLite_Helper.cc  SQLite_Helper.hh
Delta/: DeltaBase.cc  DeltaBase.hh  DeltaDiff.cc  DeltaDiff.hh  DeltaRoot.cc  DeltaRoot.hh
Deprecated/: FloatErr.cc  FloatErr.hh  RefCounter.hh  RefPool.cc  RefPool.hh  SMFile.cc  SMFile.hh
Doc/: CMakeLists.txt  Doxyfile
Exegete/: EX_Context.cc  EX_Context.hh  EX_Note.cc  EX_Note.hh  EX_Scope.cc  EX_Scope.hh  EX_VariableNote.hh  Exegete.hh
Framework/: AnaGlobals.hh  AnaIndex.hh  AnalysisDB.cc  AnalysisStep.cc  AnalysisStep.hh  Clustered.hh  ClusteredWindow.hh  CodeVersion.cc  CodeVersion.hh  Collator.hh  ConfigAssembler.hh  ConfigCollator.hh  ConfigFactory.hh  ConfigOrderQ.hh  ConfigParallel.hh  ConfigProcess.cc  ConfigProcess.hh  ConfigThreader.hh  ContextMap.cc  ContextMap.hh  DataFrame.cc  DataFrame.hh  DataSink.hh  DataSinkTee.hh  DataSource.hh  DiskIOJobControl.cc  ExplainConfig.cc  ExplainConfig.hh  GlobalArgs.cc  GlobalArgs.hh  JobQueue.cc  JobQueue.hh  KTAccumulateJobComm.cc  KTAccumulateJobComm.hh  ModuleRegistrar.hh  MultiJobControl.cc  MultiJobControl.hh  MultiOrderer.hh  MultiProcess.cc  MultiProcess.hh  (+30 more)
GeneralUtils/: AllocPool.hh  AnaGlobals.hh  AnalysisDB.cc  AnalysisDB.hh  AnalysisDB_Schema.sql  AxisEnum.hh  BBox.hh  BinaryOutputObject.hh  BoxTree.hh  CodeVersion.cc  ColorSpec.cc  ColorSpec.hh  CompileVersion.cc  CompileVersion.hh  ConfigDB_Helper.cc  ConfigDB_Helper.hh  ConfigProcess.hh  ControlMenu.cc  ControlMenu.hh  DynamicHistogram.cc  DynamicHistogram.hh  FloatErr.cc  FloatErr.hh  GridLayout.hh  HDF5_CfgLoader.hh  HDF5_IO.cc  HDF5_IO.hh  HDF5_StructInfo.cc  HDF5_StructInfo.hh  HDF5_Table_Cache.hh  JobQueue.cc  KeyTable.cc  KeyTable.hh  LocklessCircleBuffer.hh  MPIJobControl.cc  MPIJobControl.hh  Makefile  MultiWindow.cc  MultiWindow.hh  NCubicGrid.hh  (+53 more)
HDF5/: HDF5_CfgLoader.hh  HDF5_IO.cc  HDF5_IO.hh  HDF5_StructInfo.cc  HDF5_StructInfo.hh  HDF5_Table_Cache.hh
JobControl/: BinaryIO.cc  BinaryIO.hh  DiskBIO.cc  DiskBIO.hh  DiskIOJobControl.cc  DiskIOJobControl.hh  JobState.cc  JobState.hh  KTAccumJob.cc  KTAccumJob.hh  KTAccumulateJobComm.cc  KTAccumulateJobComm.hh  KeyTable.cc  KeyTable.hh  MPIBinaryIO.cc  MPIBinaryIO.hh  MPIJobControl.cc  MPIJobControl.hh  MemBIO.cc  MemBIO.hh  MultiJobControl.cc  MultiJobControl.hh  SockBinIO.hh  ThreadsJobControl.cc  ThreadsJobControl.hh
Math/: Abstract.hh  Averager.hh  BBox.hh  BoxTree.cc  BoxTree.hh  CayleyTable.hh  ChebyshevPolynomials.cc  ChebyshevPolynomials.hh  ChunkConvolver.cc  ChunkConvolver.hh  ConjugacyDecomposition.hh  CyclicGroup.hh  DiskQuadrature.hh  DivisorCheck.hh  EqMatrix.cc  EqMatrix.hh  EquivalenceClasses.hh  Eratosthenes.cc  Eratosthenes.hh  FFTW_Convolver.cc  FFTW_Convolver.hh  FFTW_notes.txt  FiniteGroup.hh  GeomCalcUtils.hh  HalfedgeDS.cc  HalfedgeDS.hh  HermitePolynomials.cc  HermitePolynomials.hh  Icosahedral.cc  Icosahedral.hh  Interval.hh  IntervalSet.hh  JankoGroup.cc  JankoGroup.hh  LaguerrePolynomials.cc  LaguerrePolynomials.hh  LaplacianSums.cc  LaplacianSums.hh  LegendrePolynomials.cc  LegendrePolynomials.hh  (+44 more)
Matrix/: BinaryOutputObject.hh  BlockCMat.cpp  BlockCMat.hh  CMatrix.cpp  CMatrix.hh  Clustering.cc  Clustering.hh  ConvolverFactory.cc  ConvolverFactory.hh  CoordTransform.hh  LAPACKE_Matrix.cpp  LAPACKE_Matrix.hh  LinMin.cpp  LinMin.hh  Makefile  Matrix.hh  Monomial.hh  Permutation.cc  Permutation.hh  Polynomial.hh  TLS_Solver.cc  TLS_Solver.hh  VarMat.hh  VarVec.hh  Vec.hh  Vec_Null.hh
Physics/: AtomsDB.py  BetaSpectrumGenerator.cc  BetaSpectrumGenerator.hh  CODATA_2014_Constants.txt  DecaySchemePlotter.py  DecaySpecBuilder.py  ENSDF_CardDB.py  ENSDF_DB.sql  ENSDF_ParsedDB.py  ENSDF_Reader.py  ElectronBindingEnergy.cc  ElectronBindingEnergy.hh  FilterCircuits.hh  FresnelEqs.cc  FresnelEqs.hh  GammaEdgeFitter.cc  GammaEdgeFitter.hh  GammaMultiScatter.cc  GammaMultiScatter.hh  GammaScattering.hh  NeutronPhysConstants.hh  NuclEvtGen.cc  NuclEvtGen.hh  NuclEvtTTree.cc  NuclEvtTTree.hh  NuclPhysConstants.hh  PDGid.cc  PDGid.hh  PolarizedBetaAsym.cc  PolarizedBetaAsym.hh  RelKin.cc  RelKin.hh  SatoNiitaNeutrons.cc  SatoNiitaNeutrons.hh  UnpolarizedBeta.cc  UnpolarizedBeta.hh  UnpolarizedNeutronDecay.cc  UnpolarizedNeutronDecay.hh  ZCircuit.hh  gammascatter.py
ROOTUtils/: .gitignore  BurstFill.hh  CircleMin.cc  CircleMin.hh  CumulativeData.hh  DynamicPluginSaver.cc  DynamicPluginSaver.hh  EnumerationFitter.cc  EnumerationFitter.hh  GraphUtils.cc  GraphUtils.hh  GraphicsUtils.cc  GraphicsUtils.hh  HistogramSequenceFitter.cc  HistogramSequenceFitter.hh  IterRangeFitter.cc  IterRangeFitter.hh  LinHistCombo.cc  LinHistCombo.hh  LinkDef.h  Makefile  MultiFill.cc  MultiFill.hh  MultiGaus.cc  MultiGaus.hh  OutputManager.cc  OutputManager.hh  PluginSaver.cc  PluginSaver.hh  PointCloudHistogram.cc  PointCloudHistogram.hh  Poisswifter.cc  Poisswifter.hh  ROOTLoader.cc  ROOTLoader.hh  SegmentSaver.cc  SegmentSaver.hh  SplineFit.cc  SplineFit.hh  TChainScanner.cc  (+18 more)
Socket/: SockConnection.cc  SockConnection.hh  SockDataSink.hh  SockDistributor.cc  SockDistributor.hh  SockIOServer.cc  SockIOServer.hh  SockOutBuffer.cc  SockOutBuffer.hh
Sound/: Boop.cc  Boop.hh  MicSim.cc  MicSim.hh  WAVgen.hh
Test/: Delta.cc  SQLite_Clone.cc  TestOperators.hh  mpmexamples.cc  testExegete.cc  testFFTW.cc  testFiber.cc  testFiniteGroup.cc  testFitters.cc  testHDS.cc  testIcosahedral.cc  testJobControl.cc  testMatrix.cc  testNoisyMin.cc  testPolynomial.cc  testQuadratic.cc  testRational.cc  testRelKin.cc  testVisr.cc
Utility/: AllocPool.hh  AnaIndex.hh  Averager.hh  AxisEnum.hh  BBox.hh  BitflagEnums.hh  ClusteredWindow.hh  CodeVersion.cc  CodeVersion.hh  Collator.cc  Collator.hh  ConfigParallel.hh  ConfigThreader.hh  ContextMap.cc  ContextMap.hh  ControlMenu.cc  ControlMenu.hh  DecisionTree.hh  FloatErr.cc  (+102 more)
doc/: CMakeLists.txt  Doxyfile
(+176 files in other folders)
